@@ -1,4 +1,4 @@
-<refentry id="iptc-about" revision="28 Aug 2005">
+<refentry id="iptc-about" revision="6 Sep 2005">
 <refmeta>
 	<refentrytitle>About libiptcdata</refentrytitle>
 	<manvolnum>3</manvolnum>
@@ -76,16 +76,18 @@
 	 <programlisting>
 Utility for viewing and modifying the contents of IPTC metadata in images
 
-Usage: iptc [OPTION]... [FILE]
+Usage: iptc [OPTIONS] [FILE]...
 
 Examples:
   iptc image.jpg       # display the IPTC metadata contained in image.jpg
-  iptc -a Caption -v "Foo" image.jpg
-                       # add caption "Foo" to the IPTC data in image.jpg
+  iptc -m Caption -v "Foo" *.jpg
+                       # set caption "Foo" in all jpegs of the curr. dir.
+  iptc -a Keywords -v "vacation" *.jpg
+                       # add keyword "vacation" to all jpegs
 
 Operations:
   -a, --add=TAG        add new tag with identifier TAG
-  -m, --modify=TAG     modify tag with identifier TAG
+  -m, --modify=TAG     modify tag with identifier TAG (add if not present)
   -v, --value=VALUE    value for added/modified tag
   -d, --delete=TAG     delete tag with identifier TAG
   -p, --print=TAG      print value of tag with identifier TAG
@@ -93,10 +95,13 @@ Operations:
 Options:
   -q, --quiet          produce less verbose output
   -b, --backup         backup any modified files
+  -s, --sort           sort tags before displaying or saving
 
 Informative output:
+  -l, --list           list the names of all known tags (i.e. Caption, etc.)
+  -L, --list-desc=TAG  print the name and description of TAG
       --help           print this help, then exit
-      --version        print iptc program version number
+      --version        print iptc program version number, then exit
 	 </programlisting>
 
 	 The source code of iptc also serves as a reference for writing other
